--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "sass": "^1.71.0",
     "serve": "^14.2.4",
     "stylelint": "^15.10.2",
-    "stylelint-config-twbs-bootstrap": "^11.0.1"
+    "stylelint-config-twbs-bootstrap": "^11.0.1",
+    "prettier": "^3.4.2",
+    "purgecss": "^7.0.2",
+    "yargs": "^17.7.2"
   }
 }
