--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "stylelint": "stylelint \"dist/**/*.scss\"",
     "release": "grunt release",
     "test": "npm run stylelint",
-    "risk":"npm run build && node ./tools/purge-css-cli.js --html='../risk-dark-maqueta-vanilla/index.html' -o='../risk-dark-maqueta-vanilla/assets/css/risk.css'"
+    "risk": "node ./tools/purge-css-cli.js --html='../risk-dark-maqueta-vanilla/index.html' -o='../risk-dark-maqueta-vanilla/assets/css/cpa-bs.css'",
+    "risk:build": "npm run build && node ./tools/purge-css-cli.js --html='../risk-dark-maqueta-vanilla/index.html' -o='../risk-dark-maqueta-vanilla/assets/css/cpa-bs.css'"
   },
   "files": [
     "dist/**/*.{css,scss,map}"
