--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "stylelint": "stylelint \"dist/**/*.scss\"",
     "release": "grunt release",
     "test": "npm run stylelint",
-    "risk": "node ./tools/purge-css-cli.js --html='../risk-dark-maqueta-vanilla/index.html' -o='../risk-dark-maqueta-vanilla/assets/css/cpa-bs.css'",
-    "risk:build": "npm run build && node ./tools/purge-css-cli.js --html='../risk-dark-maqueta-vanilla/index.html' -o='../risk-dark-maqueta-vanilla/assets/css/cpa-bs.css'",
-    "risk:pug": "./tools/convert-pug.js -i ./risk-pug/templates/  -o ../risk-dark-maqueta-vanilla/"
+    "risk": "node ./tools/purge-css-cli.js -i='../risk-dark-maqueta-vanilla/public/' -o='../risk-dark-maqueta-vanilla/public/assets/css/cpa-bs.css'",
+    "risk:build": "npm run build && node ./tools/purge-css-cli.js -i='../risk-dark-maqueta-vanilla/public/' -o='../risk-dark-maqueta-vanilla/public/assets/css/cpa-bs.css'",
+    "risk:pug": "./tools/convert-pug.js -i ./risk-pug/pages/  -o ../risk-dark-maqueta-vanilla/public/"
   },
   "files": [
     "dist/**/*.{css,scss,map}"
